--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,6 +27,16 @@ springdoc.swagger-ui.url=/ana-service/v3/api-docs
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 
+spring.redis.host=localhost
+spring.redis.port=6379
+#spring.redis.password=yourpassword  # if applicable
+spring.redis.database=0
+spring.redis.jedis.pool.max-active=10
+spring.redis.jedis.pool.max-idle=5
+spring.redis.jedis.pool.min-idle=1
+spring.redis.timeout=2000ms
+
+
 
 management.endpoint.health.show-details=always
 management.endpoints.web.exposure.include=*
