--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,8 @@ spring.r2dbc.pool.enabled=true
 spring.r2dbc.pool.initial-size=10
 spring.r2dbc.pool.max-size=50
 
+spring.security.user.name=admin
+spring.security.user.password=admin123
 
 # OpenAPI Title, Version, and Description
 
@@ -38,6 +40,9 @@ management.endpoint.health.show-details=always
 management.endpoints.web.exposure.include=*
 management.health.probes.enabled=true
 
+
+#encoded string reftechrishiappmakemoneyforreal
+jwt.secret=cmVmdGVjaHJpc2hpYXBwbWFrZW1vbmV5Zm9ycmVhbA==
 
 #server.shutdown=immediate
 
