--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.webflux.base-path=ana-service
 server.port=8080
 
 # PostgreSQL Database Configuration
-spring.r2dbc.url=r2dbc:postgresql://localhost:5432/anadb
-#spring.r2dbc.url=r2dbc:postgresql://tms-service-database:5432/anadb
+#spring.r2dbc.url=r2dbc:postgresql://localhost:5432/anadb
+spring.r2dbc.url=r2dbc:postgresql://tms-service-database:5432/anadb
 spring.r2dbc.username=postgres
 spring.r2dbc.password=root
 
