--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,9 @@ server.port=8080
 
 # PostgreSQL Database Configuration
 #spring.r2dbc.url=r2dbc:postgresql://localhost:5432/anadb
-spring.r2dbc.url=r2dbc:postgresql://tms-service-database:5432/anadb
-spring.r2dbc.username=postgres
-spring.r2dbc.password=root
+spring.r2dbc.url=r2dbc:postgresql://${SPRING_DATASOURCE_URL:localhost}:5432/anadb
+spring.r2dbc.username=${SPRING_DATASOURCE_USERNAME:postgres}
+spring.r2dbc.password=${SPRING_DATASOURCE_PASSWORD:root}
 
 # Hibernate/JPA Dialect for PostgreSQL
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
@@ -29,8 +29,9 @@ springdoc.swagger-ui.url=/ana-service/v3/api-docs
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 
-spring.redis.host=localhost
-spring.redis.port=6379
+#spring.redis.host=localhost
+spring.redis.host=${SPRING_REDIS_HOST:localhost}
+spring.redis.port=${SPRING_REDIS_PORT:6379}
 #spring.redis.password=yourpassword  # if applicable
 spring.redis.database=0
 spring.redis.timeout=2000ms
@@ -47,6 +48,8 @@ jwt.secret=cmVmdGVjaHJpc2hpYXBwbWFrZW1vbmV5Zm9ycmVhbA==
 
 #server.shutdown=immediate
 
+
+logging.level.org.springframework.data.redis=DEBUG
 # Optional: Hibernate Logging for Debugging
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
