--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -42,7 +42,7 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
-              containerPort: {{ .Values.service.port }}
+              containerPort: {{ .Values.service.port | default 8080 }}
               protocol: TCP
           {{- with .Values.livenessProbe }}
           livenessProbe:
@@ -62,12 +62,15 @@ spec:
           {{- end }}
           env:
             - name: SPRING_DATASOURCE_URL
-              value: { { .Values.env.SPRING_DATASOURCE_URL } }
+              value: {{ .Values.env.SPRING_DATASOURCE_URL }}
             - name: SPRING_DATASOURCE_USERNAME
-              value: { { .Values.env.SPRING_DATASOURCE_USERNAME } }
+              value: {{ .Values.env.SPRING_DATASOURCE_USERNAME }}
             - name: SPRING_DATASOURCE_PASSWORD
-              value: { { .Values.env.SPRING_DATASOURCE_PASSWORD } }
-          { { - with .Values.livenessProbe } }
+              value: {{ .Values.env.SPRING_DATASOURCE_PASSWORD }}
+            - name: SPRING_REDIS_HOST
+              value: "{{ .Values.env.SPRING_REDIS_HOST }}"
+            - name: SPRING_REDIS_PORT
+              value: "{{ .Values.env.SPRING_REDIS_PORT }}"
       {{- with .Values.volumes }}
       volumes:
         {{- toYaml . | nindent 8 }}
